@@ -9,6 +9,9 @@ reboot_cmd          /sbin/shutdown -r now
 console_cmd         /usr/X11R6/bin/xterm -C -fg white -bg black +sb -T "Console login" -e /bin/sh -c "/bin/cat /etc/issue; exec /bin/login"
 #suspend_cmd        /usr/sbin/suspend
 
+# Activate numlock when slim starts. Valid values: on|off
+numlock             on
+
 # This command is executed after a succesful login.
 # you can place the %session and %theme variables
 # to handle launching of specific commands in .xinitrc
